workloads/argocd-podinfo/new-podinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-podinfo-gateway
  annotations:
    fluxcd.io/automated: "true"
    # fluxcd.io/tag.init: regex:^3.10.*
    # fluxcd.io/tag.podinfod: semver:~3.1
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 1818
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-podinfo
annotations:
  fluxcd.io/automated: "true"
  # fluxcd.io/tag.init: regex:^3.10.*
  # fluxcd.io/tag.podinfod: semver:~3.1
spec:
  hosts:
    - "*"
  gateways:
    - argocd-podinfo-gateway
  http:
    - route:
        - destination:
            host: argocd-podinfo
            port:
              number: 9898
